# AutoDark

./: .ignore  CMakeLists.txt  README.md  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  themeswitcher.cpp  themeswitcher.h
